# hunter

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
analyzer/: CMakeLists.txt
analyzer/include/analyzer/core/: analyzer_options.hpp
analyzer/include/analyzer/core/analysis/: analyses.hpp
analyzer/include/analyzer/core/checker/: checkers.hpp
analyzer/include/analyzer/core/def/: analyses.def  checkers.def  domains.def  events.def  regions.def  symbols.def
analyzer/include/analyzer/core/event/: events.hpp
analyzer/include/analyzer/support/: event.hpp  symbol.hpp
analyzer/include/analyzer/tooling/: cl_opts.hpp  context.hpp  diagnostic.hpp  driver.hpp  module.hpp  options.hpp  reporter.hpp
analyzer/src/: CMakeLists.txt
analyzer/src/tooling/: context.cpp  diagnostic.cpp  driver.cpp  options.cpp  reporter.cpp
analyzer/tools/: CMakeLists.txt  main.cpp
cg/: CMakeLists.txt
cg/include/cg/tooling/: cl_opts.hpp  driver.hpp
cg/src/: CMakeLists.txt
cg/src/tooling/: driver.cpp
cg/tools/: CMakeLists.txt  main.cpp
cmake/: addCommon.cmake
common/: CMakeLists.txt
common/include/common/support/: clang_ast.hpp  dumpable.hpp  graph.hpp
common/include/common/util/: assert.hpp  globs.hpp  llvm.hpp  log.hpp  sqlite3.hpp  vfs.hpp
common/src/: CMakeLists.txt
common/src/util/: globs.cpp  llvm.cpp  sqlite3.cpp  vfs.cpp
scripts/: run-clang-format  run-clang-tidy
